--- a/deps/sitehakyll/ffwd-fish-site.cabal
+++ b/deps/sitehakyll/ffwd-fish-site.cabal
@@ -6,6 +6,7 @@ cabal-version:      >= 1.10
 executable ffwd-fish-site
   main-is:          site.hs
   build-depends:    base == 4.*
-                  , hakyll == 4.6.*
+                  , hakyll == 4.7.3.*
+                  , data-default == 0.5.3
   ghc-options:      -threaded
   default-language: Haskell2010
